# lux

./: .gitignore  QA_report.txt  README.md  dev.envrc  hex-2.5.0.ez  issue.json  issue.txt  lux_pr_825_fix_walkthrough.md  test.envrc
.github/workflows/: lux-ci-proof.yml
lux/: Makefile  mix.exs
lux/.github/workflows/: lux-ci-proof.yml
lux/benchmarks/: twitter_client_benchmark.exs
lux/config/: runtime.exs
lux/guides/: defi_analytics.livemd  defi_analytics.md  discord_community_management.md  event_monitoring.livemd  gas_optimization.livemd  gas_optimization_and_tx_management.md  multi_chain_data_aggregation.md  nft_marketplace.md  rust_components.md  rust_integration.md  rust_type_system.md  telegram.livemd  testing.md  twitter_api_core.livemd  web3_auth.md  youtube_analytics.livemd  youtube_community_management.md  youtube_content_intelligence.md  youtube_content_pipeline.md
lux/lib/lux/: agent.ex  application.ex  company.ex  config.ex  lens.ex  rust_core.ex  type_system.ex
lux/native/lux_components/: Cargo.toml
lux/native/lux_components/examples/: basic_prism.rs
lux/native/lux_components/src/: beam.rs  context.rs  error.rs  lib.rs  lifecycle.rs  prism.rs  registry.rs
lux/native/lux_types/: Cargo.toml
lux/priv/rust/: Cargo.toml
lux/test/: test_helper.exs
lux/test/integration/: defi_analytics_test.exs  gas_optimization_test.exs  mira_test.exs  multi_chain_test.exs  telegram_pipeline_test.exs  web3_auth_flow_test.exs  youtube_community_management_test.exs
lux/test/lux/: rust_core_test.exs  type_system_test.exs
lux_app/assets/css/: app.css
(+450 files in other folders)
