[package]
name = "lux_components"
version = "0.1.0"
edition = "2021"
description = "Rust component definition system for the Lux framework"
license = "MIT"

[dependencies]
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
thiserror = "1.0"
rustler = "0.33"
dashmap = "5.5" # For performance optimizations (concurrent maps)

[dev-dependencies]
tokio-test = "0.4"
